--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p class="sec-lead">7-Schritte Plan und Profilanalyse</p>
         <div class="grid grid-2 cards">
           <article class="card">
-            <img src="instprofil.png" alt="Leadership Messaging">
+            <img src="profilanalyse.jpg" alt="Leadership Messaging">
             <div class="card__body">
               <h3 class="card__title">Profilanalyse</h3>
               <p class="card__text">Wie es abläuft</p>
