--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     <section id="partners" class="section">
   <div class="container narrow">
-    <h2 class="sec-title">Partnerschaft</h2>
+    <h2 class="sec-title">Website-Erstellung Fokus auf Social Media Pages</h2>
     <p class="sec-lead">
       Exklusive Kooperation zwischen <strong>Fürst Software & Web Development</strong> und <strong>Stefanie Weiss</strong> – 
       für alle, die ihren Social-Media-Auftritt auf das nächste Level bringen wollen.
@@ -211,10 +211,10 @@
         <div class="card__body">
           <h3 class="card__title">Social Media Website – Advanced</h3>
           <p class="card__text">
-            Das Upgrade für Anspruchsvolle: Mehr Seiten, mehr Funktionen, 
-            und auf Wunsch inklusive API-Anbindung oder automatisierter Kontaktformulare.
+           Eine umfangreiche Onepage-Website mit erweiterten Funktionen und maßgeschneidertem Design.  
+           Perfekt für Unternehmerinnen, die ihre Marke online stark positionieren und wachsen wollen.
           </p>
-          <p><strong>Mit Rabattcode via @social.steffi</strong> – spare bis zu <strong>20%</strong>.</p>
+          <p><strong>Mit Rabattcode via @social.steffi</strong> – spare bis zu <strong>15%</strong>.</p>
         </div>
       </article>
     </div>
