--- a/index.html
+++ b/index.html
@@ -67,112 +67,107 @@
         <p class="sec-lead">7-Schritte Plan und Profilanalyse</p>
         <div class="grid grid-2 cards">
           <article class="card">
-            <img src="profilanalyse.jpg" alt="Leadership Messaging">
-            <div class="card__body">
-              <h3 class="card__title">Profilanalyse</h3>
-              <p class="card__text">Wie es abläuft</p>
-              <a class="btn" href="#contact">Details</a>
-            </div>
-          </article>
-          <article class="card">
             <img src="7schritte.png" alt="Authority Systems">
             <div class="card__body">
               <h3 class="card__title">7-Schritte Plan</h3>
               <p class="card__text">Formate & Rhythmen, die Reichweite zu Umsatz machen.</p>
-              <a class="btn" href="#contact">Details</a>
+              <a class="btn" href="#plan" target="_blank" rel="noopener">Details</a>
+
+
+            </div>
+          </article>
+          <article class="card">
+            <img src="profilanalyse.jpg" alt="Leadership Messaging">
+            <div class="card__body">
+              <h3 class="card__title">Profilanalyse</h3>
+              <p class="card__text">Wie es abläuft</p>
+               <a class="btn" href="#profilanalyse" target="_blank" rel="noopener">Details</a>
+
             </div>
           </article>
         </div>
       </div>
     </section>
 
+
+    <section id="plan" class="section">
+  <div class="container narrow">
+    <h2 class="sec-title">7-Schritte-Plan</h2>
+  <p class="sec-lead">
+  Mein „7-Schritte-Plan zum Profilaufbau“ erklärt dir Schritt für Schritt,
+  wie du dein Instagram-Profil so optimierst, dass es professionell, klar
+  und verkaufsstark wirkt.
+</p>
+
+<p>
+  Er zeigt dir das perfekte Grundgerüst, das sofort Vertrauen aufbaut und
+  dich so klar positioniert, dass du neue Follower und Kunden leichter anziehst –
+  und sie auf den ersten Blick verstehen, welchen Mehrwert <strong>du</strong> ihnen gibst.
+</p>
+
+
+     <a class="btn" href="https://boards.com/a/d66CB.JNHsoW" target="_blank" rel="noopener">Zu dem 7-Schritte-Plan</a>
+  </div>
+</section>
+
    <section id="profilanalyse" class="section section--alt">
   <div class="container narrow">
     <h2 class="sec-title">Profilanalyse</h2>
     <p class="sec-lead">
-      Die professionelle Profilanalyse zeigt dir glasklar, was auf deinem Instagram-Profil bereits funktioniert 
-      und wo Reichweite, Follows und Anfragen aktuell liegen bleiben.
-    </p>
+  Ich schaue mir dein Instagram-Profil genau an und zeige dir, was schon gut läuft 
+  und wo du aktuell Reichweite, Follower oder Anfragen verlierst.
+</p>
 
-    <p>
-      Ich prüfe dein Profil ganzheitlich: Bio-Text (Hook, Nutzen, CTA), Profilname & Handle (Suchbarkeit), 
-      Profilbild und Highlights, visuelle Linie (Farbwelt, Typo, Thumbnails), Content-Mix und Messaging 
-      (Hooks, Struktur, Story-Angles), Posting-Rhythmus und Formate (Reels, Carousel, Stories). 
-      Zusätzlich checke ich die Auffindbarkeit (Keywords in Name/Bio/ALT-Texten, Hashtag-System), 
-      deinen Funnel & die Conversion-Pfade (CTA-Platzierung, Link-Setup, DM-Flows) sowie die Performance-KPIs 
-      mit konkreten Quick-Wins und Prioritäten für die nächsten 30 Tage.
-    </p>
+<p>
+  Ich prüfe alles rund um dein Profil – dein Erscheinungsbild, deinen Namen, deine Bio und deine Highlights.  
+  Dabei bekommst du wertvolle Tipps zu Bilddesign, Gestaltung und rechtlichen Punkten.  
+  Außerdem zeige ich dir Schritt für Schritt, wie einfach Communityaufbau sein kann, 
+  um aus Followern nicht nur Zuschauer, sondern echte potenzielle Kunden zu machen.
+</p>
 
-    <p>
-      <strong>Dein Ergebnis:</strong> ein klarer, umsetzbarer Maßnahmenplan mit den wichtigsten Hebeln, 
-      damit dein Profil sichtbarer wirkt, mehr Profilbesuche zu Followern werden und Content verlässlich in Anfragen zahlt.
-    </p>
+<p>
+  <strong>Am Ende bekommst du:</strong><br>
+  → Einen klaren, umsetzbaren Maßnahmenplan mit den wichtigsten Schritten,  
+  damit dein Profil sichtbarer wird, mehr Profilbesucher zu Followern werden  
+  und dein Content zu echten <strong>Anfragen</strong> führt.
+</p>
 
-    <a class="btn" href="#contact">Profilanalyse anfragen</a>
+
+     <a class="btn" href="https://designstudiosw.tentary.com/p/LPdWmJ " target="_blank" rel="noopener">Zur profilanalyse</a>
   </div>
 </section>
 
 
-   <section id="7Schritte" class="section">
-  <div class="container narrow">
-    <h2 class="sec-title">7-Schritte-Plan</h2>
-    <p class="sec-lead">
-      Der 7-Schritte-Plan ist dein klar strukturierter Fahrplan, um auf Instagram sichtbar zu werden, 
-      Vertrauen aufzubauen und deine Reichweite gezielt in Anfragen oder Verkäufe zu verwandeln.
-    </p>
-
-    <p>
-      In sieben einfachen, aber wirkungsvollen Schritten lernst du, wie du dein Profil professionell aufbaust, 
-      deine Zielgruppe richtig ansprichst und Content erstellst, der wirklich konvertiert. 
-      Dabei geht es nicht um kurzfristige Trends, sondern um nachhaltige Sichtbarkeit und Markenaufbau.
-    </p>
-
-    <p>
-      <strong>Was dich erwartet:</strong> 
-      Wir starten mit der Optimierung deines Profils, definieren deine Positionierung und Zielgruppe, 
-      entwickeln deinen individuellen Content-Fahrplan und gehen dann in Themen wie Reichweitenaufbau, 
-      Community-Bindung und Conversion-Strategie. Jeder Schritt baut logisch auf den vorherigen auf, 
-      damit du deinen Fortschritt klar siehst und messbare Ergebnisse erreichst.
-    </p>
-
-    <p>
-      <strong>Ergebnis:</strong> 
-      Ein klarer Plan, mit dem du weißt, was du wann posten musst, wie du deine Inhalte strategisch aufbaust 
-      und wie du dein Profil zu einer echten Markenpräsenz entwickelst, die regelmäßig neue Kunden anzieht.
-    </p>
-
-    <a class="btn" href="#contact">7-Schritte-Plan anfragen</a>
-  </div>
-</section>
+   
 
 
     <section id="about" class="section section--alt">
   <div class="container narrow">
     <h2 class="sec-title">Über mich</h2>
     <p class="sec-lead">
-      Ich bin <strong>Stefanie Weiss</strong> – Mentorin, Strategin und kreative Seele. 
-      Ich unterstütze Unternehmerinnen dabei, ihre Marke mit Klarheit, Eleganz und emotionaler Tiefe aufzubauen – 
-      und damit sichtbar zu werden, ohne sich zu verstellen.
-    </p>
+  <p class="sec-lead">
+  Ich bin <strong>Stefanie Weiß</strong> (27) und arbeite als Social-Media-Marketing-Assistentin für vier Unternehmen.  
+  Zusätzlich bin ich im Online-Marketing selbstständig tätig.
+</p>
 
-    <p>
-      Mein Ansatz verbindet Strategie mit Ästhetik. 
-      Ich glaube daran, dass Erfolg auf Social Media nicht durch Lautstärke, 
-      sondern durch Authentizität und klare Positionierung entsteht. 
-      Meine Arbeit vereint analytisches Denken mit feinem Gespür für Sprache, Design und Wirkung.
-    </p>
+<p>
+  Hier bekommst du alle wichtigen Grundlagen für einen erfolgreichen Instagram-Kanal an die Hand –  
+  inklusive Designs und Vorlagen für einen professionellen und optisch ansprechenden Auftritt.  
+  Mein Ziel ist es, dich dabei zu unterstützen, deinen Social-Media-Auftritt authentisch, strukturiert und wirkungsvoll zu gestalten.
+</p>
 
-    <p>
-      In meinen 1:1 Analysen und Programmen schaffen wir gemeinsam Strukturen, 
-      die dir Sicherheit geben – und Systeme, die langfristig funktionieren. 
-      Kein Druck, kein Algorithmus-Stress, sondern ein Social-Media-Auftritt, 
-      der wirklich zu dir passt und Ergebnisse bringt.
-    </p>
+<p>
+  Zusätzlich biete ich gemeinsam mit Fürst Software & Web Development maßgeschneiderte Websites an – 
+  vollständig von Grund auf selbst Programmiert von einem <strong>diplomierten Softwareentwickler</strong> (keine Templates, kein Baukasten). 
+  So erhältst du eine schnelle, sichere und saubere Lösung, die perfekt zu deiner Marke passt.
+</p>
 
-    <p>
-      <strong>Meine Mission:</strong> 
-      Frauen in die Sichtbarkeit bringen – strategisch, stilvoll und selbstbewusst.
-    </p>
+<p>
+  Stöbere gerne durch oder arbeite direkt mit mir zusammen,  
+  um deinen Online-Auftritt gezielt weiterzuentwickeln und sichtbar zu machen.
+</p>
+
+
 
     <a class="btn" href="#contact">Mit mir arbeiten</a>
   </div>
@@ -195,40 +190,58 @@
       Diese Codes kannst du auf zwei unserer beliebtesten Webdesign-Pakete anwenden:
     </p>
 
-    <div class="grid grid-2 cards" style="margin-top:1.6rem;">
-      <article class="card">
-        <div class="card__body">
-          <h3 class="card__title">Social Media Website – Basic</h3>
-          <p class="card__text">
-            Eine moderne Onepage-Website, perfekt abgestimmt auf dein Social-Media-Branding.  
-            Ideal für Coaches, Creator und Selbstständige, die online professionell auftreten wollen.
-          </p>
-          <p><strong>Mit Rabattcode via @social.steffi</strong> – spare bis zu <strong>15%</strong>.</p>
-        </div>
-      </article>
-
-      <article class="card">
-        <div class="card__body">
-          <h3 class="card__title">Social Media Website – Advanced</h3>
-          <p class="card__text">
-           Eine umfangreiche Onepage-Website mit erweiterten Funktionen und maßgeschneidertem Design.  
-           Perfekt für Unternehmerinnen, die ihre Marke online stark positionieren und wachsen wollen.
-          </p>
-          <p><strong>Mit Rabattcode via @social.steffi</strong> – spare bis zu <strong>15%</strong>.</p>
-        </div>
-      </article>
+   <div class="grid grid-2 cards" style="margin-top:1.6rem;">
+  <article class="card">
+    <div class="card__body">
+      <h3 class="card__title">Social Media Website – Basic</h3>
+      <p class="card__text">
+        Diese Variante ist speziell für <strong>Social-Media-Auftritte</strong> konzipiert.  
+        Eine moderne, kompakte Onepage-Website, die dein Instagram-, TikTok- oder Facebook-Profil perfekt ergänzt.  
+        Sie dient als digitale Visitenkarte für dein Social-Media-Branding und zeigt deine Inhalte, Leistungen 
+        oder Links in einem professionellen Look – ohne technische Komplexität, aber mit maximaler Wirkung.
+      </p>
+      <p>
+        Ideal für <strong>Creator, Coaches, Freelancer und Marken</strong>,  
+        die ihren Social-Media-Kanal mit einem klaren, ästhetischen Online-Auftritt abrunden wollen.
+      </p>
+      <p><strong>Mit Rabattcode via @social.steffi</strong> – spare bis zu <strong>15%</strong>.</p>
     </div>
+  </article>
+
+  <article class="card">
+    <div class="card__body">
+      <h3 class="card__title">Social Media Website – Advanced</h3>
+      <p class="card__text">
+        Diese Version ist ein <strong>vollwertiger Business-Onepager</strong> –  
+        entwickelt für Unternehmerinnen und Unternehmen, die online mehr wollen als nur einen Social-Media-Auftritt.  
+        </strong> Unsere Advanced Social Media Websites sind mit modernster SEO-Struktur (Suchmaschinenoptimierung) 
+        ausgestattet, damit deine Business Website auch bei <strong>Google sichtbar ganz oben</strong> erscheint.  
+        Dazu kommen professionelle <strong>Meta-Daten, Keywords, Ladezeitoptimierung</strong> und eine elegante, konvertierende Struktur.
+      </p>
+      <p>
+        Perfekt für <strong>Business-Kunden</strong>, die ihren kompletten Online-Auftritt professionell aufbauen 
+        und langfristig Reichweite, Vertrauen und Anfragen über ihre Website gewinnen möchten.
+      </p>
+      <p><strong>Mit Rabattcode via @social.steffi</strong> – spare bis zu <strong>15%</strong>.</p>
+    </div>
+  </article>
+</div>
+
 
     <p style="margin-top:2rem;">
       Die Zusammenarbeit vereint <strong>ästhetisches Design</strong> mit <strong>technischer Präzision</strong> –  
       und bietet dir eine Website, die sowohl visuell beeindruckt als auch technisch auf höchstem Niveau performt.
     </p>
 
-    <div style="margin-top:1.6rem;">
-      <a class="btn" href="https://www.instagram.com/social.steffi/" target="_blank" rel="noopener">Rabattcode auf Instagram sichern</a>
-      <a class="btn btn--ghost" href="https://www.fuerst-software.com" target="_blank" rel="noopener" style="margin-left:8px;">Zu Fürst Software</a>
-    </div>
-  </div>
+   <div class="btn-row" style="margin-top:1.6rem;">
+  <a class="btn" href="https://www.instagram.com/social.steffi/" target="_blank" rel="noopener">
+    Rabattcode auf Instagram sichern
+  </a>
+  <a class="btn btn--ghost" href="https://www.fuerst-software.com" target="_blank" rel="noopener">
+    Zu Fürst Software
+  </a>
+</div>
+
 </section>
 
 
@@ -298,8 +311,9 @@
     <div class="container footer__inner">
       <p>© <span id="year"></span> Stefanie Weiss</p>
       <nav class="footer__nav">
-        <a href="#">Impressum</a>
-        <a href="#">Datenschutz</a>
+        <a href="impressum.html">Impressum</a>
+        <a href="datenschutz.html">Datenschutz</a>
+        <a href="agb.html">AGB</a>
       </nav>
     </div>
   </footer>
