--- a/index.html
+++ b/index.html
@@ -238,10 +238,11 @@
             <li>Fairer Direktvertrieb mit Partnerprogramm</li>
             <li>Vegan, tierversuchsfrei & Made in Austria</li>
           </ul>
-          <div style="margin-top:1rem;">
-            <a class="btn" href="https://www.ringana.com" target="_blank" rel="noopener">Mehr über RINGANA erfahren</a>
-            <a class="btn btn--ghost" href="#contact" style="margin-left:8px;">Kooperation anfragen</a>
-          </div>
+         <div class="btn-row" style="margin-top:1rem;">
+  <a class="btn" href="https://www.ringana.com" target="_blank" rel="noopener">Mehr über RINGANA erfahren</a>
+  <a class="btn btn--ghost" href="#contact" rel="noopener">Kooperation anfragen</a>
+</div>
+
         </div>
       </div>
     </section>
