--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
         <aside class="contact__aside card">
           <h3 class="card__title">Direkt vernetzen</h3>
           <div class="stack">
-            <a class="btn" href="https://instagram.com/" target="_blank" rel="noopener">Instagram</a>
-            <a class="btn btn--ghost" href="#services">Website-Erstellung</a>
+               <a class="btn" href="https://www.instagram.com/social.steffi/" target="_blank" rel="noopener">Instagram</a>
+            <a class="btn" href="https://www.fuerst-software.com" target="_blank" rel="noopener">Website-Erstellung</a>
           </div>
         </aside>
       </div>
@@ -284,3 +284,4 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
