--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Stefanie Weiss – Work With Me</title>
   <meta name="description" content="Leadership, Launching, Mindset. High-Impact Coaching & Web für ambitionierte Unternehmerinnen." />
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -33,11 +32,8 @@
     <!-- HERO -->
     <section class="hero" role="banner" aria-label="Hero">
       <div class="hero__bg">
-        <!-- Hintergrund -->
         <img src="hintergrund.png" alt="" aria-hidden="true" decoding="async" fetchpriority="high">
         <div class="hero__overlay"></div>
-
-        <!-- Canvas-Layer für Partikel -->
         <canvas id="glitterCanvas" aria-hidden="true"></canvas>
       </div>
 
@@ -70,7 +66,7 @@
             <div class="card__body">
               <h3 class="card__title">7-Schritte Plan</h3>
               <p class="card__text">Formate & Rhythmen, die Reichweite zu Umsatz machen.</p>
-              <a class="btn" href="#plan" target="_blank" rel="noopener">Details</a>
+              <a class="btn" href="#plan">Details</a>
             </div>
           </article>
           <article class="card">
@@ -78,7 +74,7 @@
             <div class="card__body">
               <h3 class="card__title">Profilanalyse</h3>
               <p class="card__text">Wie es abläuft</p>
-              <a class="btn" href="#profilanalyse" target="_blank" rel="noopener">Details</a>
+              <a class="btn" href="#profilanalyse">Details</a>
             </div>
           </article>
         </div>
@@ -222,164 +218,77 @@
     <section id="kooperation" class="section section--alt">
       <div class="container narrow">
         <h2 class="sec-title">Arbeite mit mir zusammen </h2>
-     <p class="sec-lead">
-  Du hast noch kein Produkt oder bist dir bei deinem jetzigen nicht ganz sicher,  
-  ob es wirklich den Erfolg bringt, den du dir wünschst? 💭  
-  Rechnungslegung, Mahnwesen oder Lagerung würdest du dir gerne ersparen?
-</p>
 
-<p>
-  Dann arbeite mit mir und meinem <strong>grünen Partnerunternehmen</strong> zusammen! 🌿  
-  Hier sparst du dir nicht nur <strong>Geld & Zeit</strong>, sondern auch den kompletten Aufwand  
-  von der Produktidee bis hin zum Verkauf – denn alles wird dir <strong>fix & fertig</strong> zur Verfügung gestellt.
-</p>
+        <p class="sec-lead">
+          Du hast noch kein Produkt oder bist dir bei deinem jetzigen nicht ganz sicher,  
+          ob es wirklich den Erfolg bringt, den du dir wünschst? Rechnungslegung, Mahnwesen oder Lagerung würdest du dir gerne ersparen?
+        </p>
 
-<p>
-  Du arbeitest mit <strong>hochwertigsten österreichischen Naturprodukten</strong>,  
-  einem perfekt eingerichteten <strong>Onlineshop</strong> und deinem persönlichen <strong>Bestelllink</strong>.  
-  So kannst du dich voll und ganz auf das konzentrieren, was zählt: deine <strong>Vermarktung</strong>.
-</p>
+        <p>
+          Dann arbeite mit mir und meinem <strong>grünen Partnerunternehmen</strong> zusammen!  
+          Hier sparst du dir nicht nur <strong>Geld & Zeit</strong>, sondern auch den kompletten Aufwand  
+          von der Produktidee bis hin zum Verkauf – denn alles wird dir <strong>fix & fertig</strong> zur Verfügung gestellt.
+        </p>
 
-<p>
-  Deine Aufgabe? Ganz einfach:  
-  Du kümmerst dich lediglich um die <strong>Vermarktung</strong>, arbeitest mit mir <strong>1:1 persönlich</strong> zusammen  
-  und wirst dafür <strong>großzügig am Umsatz beteiligt</strong>. 💰
-</p>
+        <p>
+          Du arbeitest mit <strong>hochwertigsten österreichischen Naturprodukten</strong>,  
+          einem perfekt eingerichteten <strong>Onlineshop</strong> und deinem persönlichen <strong>Bestelllink</strong>.  
+          So kannst du dich voll und ganz auf das konzentrieren, was zählt: deine <strong>Vermarktung</strong>.
+        </p>
 
-<p>
-  Das klingt spannend?  
-  Dann schreib mir einfach deinen <strong>Instagram-Namen</strong> oder deine <strong>Telefonnummer</strong>  
-  in das untere Feld, und ich melde mich zeitnah bei dir, um offene Fragen zu klären. ✍️
-</p>
+        <p>
+          Deine Aufgabe? Ganz einfach:  
+          Du kümmerst dich lediglich um die <strong>Vermarktung</strong>, arbeitest mit mir <strong>1:1 persönlich</strong> zusammen  
+          und wirst dafür <strong>großzügig am Umsatz beteiligt</strong>.
+        </p>
 
-<div class="btn-row" style="margin-top:1rem;">
-  <a class="btn" href="#contact">Jetzt Zusammenarbeit Anfragen</a>
-  <a class="btn btn--ghost" href="https://www.instagram.com/social.steffi/" target="_blank" rel="noopener">Direkt auf Instagram schreiben</a>
-</div>
+        <p>
+          Das klingt spannend?  
+          Dann schreib mir einfach deinen <strong>Instagram-Namen</strong> oder deine <strong>Telefonnummer</strong>  
+          in das untere Feld, und ich melde mich zeitnah bei dir, um offene Fragen zu klären.
+        </p>
 
-         
-
+        <div class="btn-row" style="margin-top:1rem;">
+          <a class="btn" href="#contact">Jetzt Zusammenarbeit anfragen</a>
+          <a class="btn btn--ghost" href="https://www.instagram.com/social.steffi/" target="_blank" rel="noopener">Direkt auf Instagram schreiben</a>
         </div>
+
       </div>
     </section>
 
     <!-- CONTACT -->
-   <section id="contact" class="section section--contact">
-  <div class="container contact grid grid-2">
-    <div class="contact__card card">
-      <h2 class="sec-title sec-title--small">Zusammenarbeit Anfragen</h2>
+    <section id="contact" class="section section--contact">
+      <div class="container contact grid grid-2">
+        <div class="contact__card card">
+          <h2 class="sec-title sec-title--small">Zusammenarbeit Anfragen</h2>
 
-      <!-- Mini-Styles nur für den Status-Toast -->
-      <style>
-        #cf-toast{
-          margin-top:12px; font-size:.95rem; line-height:1.4;
-          padding:10px 12px; border-radius:10px; border:1px solid transparent;
-        }
-        #cf-toast.success{ color:#0f5132; background:#d1e7dd; border-color:#badbcc; }
-        #cf-toast.error{ color:#842029; background:#f8d7da; border-color:#f5c2c7; }
-        /* optional: roter Rand bei ungültigen Feldern */
-        #contactForm.was-validated input:invalid,
-        #contactForm.was-validated textarea:invalid{ border-color:#b00020; }
-      </style>
+          <style>
+            #cf-toast{margin-top:12px;font-size:.95rem;line-height:1.4;padding:10px 12px;border-radius:10px;border:1px solid transparent}
+            #cf-toast.success{color:#0f5132;background:#d1e7dd;border-color:#badbcc}
+            #cf-toast.error{color:#842029;background:#f8d7da;border-color:#f5c2c7}
+            #contactForm.was-validated input:invalid,#contactForm.was-validated textarea:invalid{border-color:#b00020}
+          </style>
 
-      <form id="contactForm" class="grid grid-2" action="#" method="post" novalidate>
-        <label class="field">
-          <span>Name*</span>
-          <input id="name" type="text" name="name" required autocomplete="name">
-        </label>
-
-        <label class="field">
-          <span>E-Mail*</span>
-          <input id="email" type="email" name="email" required autocomplete="email" inputmode="email">
-        </label>
-
-        <label class="field field--full">
-          <span>Projekt / Ziel*</span>
-          <textarea id="msg" name="msg" rows="4" required></textarea>
-        </label>
-
-        <!-- Honeypot gegen Bots -->
-        <input type="text" name="_honey" style="display:none" tabindex="-1" autocomplete="off">
-
-        <div class="field field--full">
-          <button class="btn" type="submit">Absenden</button>
+          <form id="contactForm" class="grid grid-2" action="#" method="post" novalidate>
+            <label class="field"><span>Name*</span><input id="name" type="text" name="name" required autocomplete="name"></label>
+            <label class="field"><span>E-Mail*</span><input id="email" type="email" name="email" required autocomplete="email" inputmode="email"></label>
+            <label class="field field--full"><span>Projekt / Ziel*</span><textarea id="msg" name="msg" rows="4" required></textarea></label>
+            <input type="text" name="_honey" style="display:none" tabindex="-1" autocomplete="off">
+            <div class="field field--full"><button class="btn" type="submit">Absenden</button></div>
+          </form>
+          <p id="cf-toast" style="display:none;"></p>
         </div>
-      </form>
 
-      <p id="cf-toast" style="display:none;"></p>
-    </div>
-
-    <aside class="contact__aside card">
-      <h3 class="card__title">Direkt vernetzen</h3>
-      <div class="stack">
-        <a class="btn" href="https://www.instagram.com/social.steffi/" target="_blank" rel="noopener">Instagram</a>
-        <a class="btn" href="https://www.fuerst-software.com" target="_blank" rel="noopener">Website-Erstellung</a>
+        <aside class="contact__aside card">
+          <h3 class="card__title">Direkt vernetzen</h3>
+          <div class="stack">
+            <a class="btn" href="https://www.instagram.com/social.steffi/" target="_blank" rel="noopener">Instagram</a>
+            <a class="btn" href="https://www.fuerst-software.com" target="_blank" rel="noopener">Website-Erstellung</a>
+          </div>
+        </aside>
       </div>
-    </aside>
-  </div>
-
-  <script>
-    (() => {
-      const form = document.getElementById('contactForm');
-      if (!form) return;
-
-      const nameEl = document.getElementById('name');
-      const emailEl = document.getElementById('email');
-      const msgEl = document.getElementById('msg');
-      const statusBox = document.getElementById('cf-toast');
-
-      function showStatus(text, ok = true) {
-        statusBox.style.display = 'block';
-        statusBox.textContent = text;
-        statusBox.className = ok ? 'success' : 'error';
-        statusBox.id = 'cf-toast'; // ensure id stays
-      }
-
-      form.addEventListener('submit', async (e) => {
-        e.preventDefault();
-
-        if (!form.checkValidity()) {
-          form.classList.add('was-validated');
-          showStatus('Bitte alle Pflichtfelder korrekt ausfüllen.', false);
-          return;
-        }
-
-        const submitBtn = form.querySelector('button[type="submit"]');
-        const oldLabel = submitBtn ? submitBtn.textContent : null;
-        if (submitBtn) { submitBtn.disabled = true; submitBtn.textContent = 'Wird gesendet…'; }
-
-        try {
-          const fd = new FormData();
-          fd.append('name', nameEl.value.trim());
-          fd.append('email', emailEl.value.trim());
-          fd.append('message', msgEl.value.trim());
-          fd.append('_subject', 'Neue Anfrage über fuerst-software.com');
-          fd.append('_template', 'table');
-          fd.append('_captcha', 'false');
-          fd.append('_honey', '');
-
-          const res = await fetch('https://formsubmit.co/ajax/mail@fuerst-software.com', {
-            method: 'POST',
-            body: fd,
-            headers: { 'Accept': 'application/json' }
-          });
-          if (!res.ok) throw new Error('Sende-Fehler');
-          await res.json();
-
-          showStatus('Danke! Deine Anfrage ist eingegangen – wir melden uns asap.', true);
-          form.reset();
-          form.classList.remove('was-validated');
-        } catch (err) {
-          showStatus('Uff, da ist etwas schiefgelaufen. Versuch’s später nochmal.', false);
-          console.error(err);
-        } finally {
-          if (submitBtn) { submitBtn.disabled = false; submitBtn.textContent = oldLabel; }
-        }
-      });
-    })();
-  </script>
-</section>
-<!-- CONTACT -->
+    </section>
+  </main>
 
   <footer class="footer">
     <div class="container footer__inner">
