--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="hero__bg">
         <img id="heroImg" src="hintergrund.png" alt="" aria-hidden="true" decoding="async" fetchpriority="high">
         <div class="hero__overlay"></div>
-        <!-- Canvas nur Desktop; auf Mobile via CSS ausgeblendet -->
+        <!-- Canvas nur Desktop; auf Mobile via JS entfernt -->
         <canvas id="glitterCanvas" aria-hidden="true"></canvas>
       </div>
 
@@ -333,7 +333,7 @@
               if (!res.ok) throw new Error('Sende-Fehler');
               await res.json();
 
-              showStatus('Danke! Deine Anfrage ist eingegangen – wir melden uns zeitnah.', true);
+              showStatus('Danke! Deine Anfrage ist eingegangen – wir melden uns asap.', true);
               form.reset();
               form.classList.remove('was-validated');
             } catch (err) {
@@ -362,4 +362,3 @@
   <script src="script.js" defer></script>
 </body>
 </html>
-
