--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           Die Zusammenarbeit vereint <strong>ästhetisches Design</strong> mit <strong>technischer Präzision</strong>.
         </p>
 
-        <div class="btn-row" style="margin-top:1.6rem;">
+        <div class="btn-row" style="margin: top 1.6rem;";>
           <a class="btn" href="https://www.instagram.com/social.steffi/" target="_blank" rel="noopener">
             Rabattcode auf Instagram sichern
           </a>
