--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- HERO -->
     <section class="hero" role="banner" aria-label="Hero">
       <div class="hero__bg">
+        <!-- ID ergänzt für präzises Parallax-Targeting -->
         <img id="heroImg" src="hintergrund.png" alt="" aria-hidden="true" decoding="async" fetchpriority="high">
         <div class="hero__overlay"></div>
-        <!-- Canvas nur Desktop; auf Mobile via JS entfernt -->
         <canvas id="glitterCanvas" aria-hidden="true"></canvas>
       </div>
 
@@ -271,7 +271,6 @@
             <div class="field field--full"><button class="btn" type="submit">Absenden</button></div>
           </form>
 
-          <!-- Statusausgabe -->
           <p id="cf-toast" class="toast" style="display:none;"></p>
         </div>
 
@@ -284,7 +283,6 @@
         </aside>
       </div>
 
-      <!-- Kontaktformular-Logik inline (wie gewünscht) -->
       <script src="script.js" defer></script>
     </section>
   </main>
