--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <!-- HERO -->
     <section class="hero" role="banner" aria-label="Hero">
       <div class="hero__bg">
-        <!-- ID ergänzt für präzises Parallax-Targeting -->
         <img id="heroImg" src="hintergrund.png" alt="" aria-hidden="true" decoding="async" fetchpriority="high">
         <div class="hero__overlay"></div>
+        <!-- goldener Regen -->
         <canvas id="glitterCanvas" aria-hidden="true"></canvas>
       </div>
 
@@ -282,8 +282,6 @@
           </div>
         </aside>
       </div>
-
-      <script src="script.js" defer></script>
     </section>
   </main>
 
@@ -298,5 +296,6 @@
     </div>
   </footer>
 
+  <script src="script.js" defer></script>
 </body>
 </html>
