--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           dich so klar positioniert, dass du neue Follower und Kunden leichter anziehst –
           und sie auf den ersten Blick verstehen, welchen Mehrwert <strong>du</strong> ihnen gibst.
         </p>
-        <a class="btn" href="https://boards.com/a/d66CB.JNHsoW" target="_blank" rel="noopener">Zu dem 7-Schritte-Plan</a>
+        <a class="btn" href="https://boards.com/a/d66CB.JNHsoW" target="_blank" rel="noopener">Zum 7-Schritte-Plan</a>
       </div>
     </section>
 
@@ -301,3 +301,4 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
