--- a/index.html
+++ b/index.html
@@ -303,5 +303,19 @@
   </footer>
 
   <script src="script.js" defer></script>
+  <!-- Cookie Banner -->
+<div class="cc-banner" role="dialog" aria-live="polite" aria-label="Cookie-Hinweis" hidden>
+  <div class="container cc-inner">
+    <p class="cc-text">
+      Wir verwenden Cookies, um Inhalte bereitzustellen und die Performance zu verbessern.
+      Mehr Infos in der <a href="datenschutz.html">Datenschutzerklärung</a>.
+    </p>
+    <div class="cc-actions">
+      <button class="btn btn--ghost" id="cc-ess">Nur notwendige</button>
+      <button class="btn" id="cc-acc">Alle akzeptieren</button>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
