--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           Stöbere gerne durch oder arbeite direkt mit mir zusammen,  
           um deinen Online-Auftritt gezielt weiterzuentwickeln und sichtbar zu machen.
         </p>
-        <a class="btn btn--ghost" href="https://www.instagram.com/social.steffi/" target="_blank" rel="noopener">Direkt auf Instagram schreiben</a>
+        <a class="btn btn--ghost" href="https://www.instagram.com/social.steffi/" target="_blank" rel="noopener">Mit mir Arbeiten</a>
       </div>
     </section>
 
@@ -319,4 +319,5 @@
 
 </body>
 </html>
+
 
